XWIKI-22065: Add subsections to the preference menu * Fixed style related to the user preferences menu * Fixed creation of categories.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/vertical-menus.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/vertical-menus.less
@@ -9,7 +9,7 @@
     .list-group;
     li {
       display: block;
-      font-size: @font-size-small;
+      font-size: 100%;
       .group {
         .list-group-item;
         text-transform: uppercase;
@@ -19,6 +19,7 @@
         padding: 5px 30px;
         &:hover, &.current-group {
           background-color: @navbar-inverse-bg;
+          color: @navbar-inverse-color;
           & a {
             color: @navbar-inverse-link-color;
           }
