XWIKI-22065: Add subsections to the preference menu * Updated style and a little bit the architecture
Note: with the default flavor, the template for the verticalMenu used is from web-templates, but the one for items is in flamingo-skin-resources...

--- a/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-templates/src/main/resources/templates/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-templates/src/main/resources/templates/macros.vm
@@ -2284,7 +2284,7 @@ $displayName##
   #if ($name == '')
     #set ($name = $services.localization.render("$!{options.translationPrefix}${item.id}"))
   #end
-  $level (% id="vertical-menu-${item.id}" class="${class}" %){{html}}<a #if ("$!{item.url}" != '')href="$item.url"#{end}>$name</a>{{/html}}
+  $level (% id="vertical-menu-${item.id}" class="${class} panel panel-default" %){{html}}<a #if ("$!{item.url}" != '')href="$item.url"#{end} class="panel-heading">$name</a>{{/html}}
   #if ($hasChildren)
     #set ($children = [])
     #sortCollectionOfMapsByField($item.children, 'order', 99999, 'asc', $children)
