--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/vertical-menus.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/vertical-menus.less
@@ -10,6 +10,11 @@
     li {
       display: block;
       font-size: 100%;
+      & a {
+        display: flex;
+        align-items: center;
+      }
+
       .group {
         .list-group-item;
         text-transform: uppercase;
