XWIKI-21114: Page buttons background follows @breadcrumb-bg value * WIP

--- a/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-templates/src/main/resources/templates/informationinline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-templates/src/main/resources/templates/informationinline.vm
@@ -187,7 +187,7 @@ $xwiki.jsfx.use('uicomponents/edit/editableProperty.js', {'forceSkinAction': tru
     </label>
   </dt>
   <dd id=""information-reference"">
-    <div class=""reference-group input-group flat-buttons"">
+    <div class=""reference-group input-group"">
       #set ($globalHint = $services.localization.render('core.viewers.information.pageReference.globalButton'))
       <span class=""input-group-btn"">
         <button id=""button-inout"" class=""btn btn-default"" type=""button"" title=""$escapetool.xml($globalHint)"">
