--- a/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-templates/src/main/resources/templates/stylesheets.vm
+++ b/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-templates/src/main/resources/templates/stylesheets.vm
@@ -42,11 +42,14 @@ $originalUrl?$queryString## prevent line break in output
   #set ($discard = $urlParametersMap.put("colorThemeVersion", $themeDoc.version))
 #end
 #set ($urlParameters = $escapetool.xml($escapetool.url($urlParametersMap)))
-#set ($defaultStyleURL = $escapetool.xml($xwiki.getSkinFile($defaultstyle, true)))
 #set ($cssVarsInitializationURL = $escapetool.xml($xwiki.getSkinFile("cssVariablesInit.css", true)))
+#set ($defaultStyleURL = $escapetool.xml($xwiki.getSkinFile($defaultstyle, true)))
 
-<link href="#concatenateQueryParameter($defaultStyleURL, $urlParameters)" rel="stylesheet" type="text/css" media="all" />
+## The default styles can contain some CSS property uses (mostly through colorTheme custom code).
+## We order the file imports to make sure the CSS property initialization comes first and its values are overridden 
+## by the ones contained in default styles.
 <link href="#concatenateQueryParameter($cssVarsInitializationURL, $urlParameters)" rel="stylesheet" type="text/css" media="all" />
+<link href="#concatenateQueryParameter($defaultStyleURL, $urlParameters)" rel="stylesheet" type="text/css" media="all" />
 <link href="#concatenateQueryParameter($escapetool.xml($xwiki.getSkinFile('print.css', true)), $urlParameters)" rel="stylesheet" type="text/css" media="#if ($printss)all#{else}print#{end}" />
 ## The stylesheets configuration option allows to override the alternate stylesheets
 ## style1.css, style2.css and style3.css
