XWIKI-22668: Migrate most of XWiki's LESS files to native CSS * Moved the `flat-buttons` mixin to `buttons.less` * Removed the xwikitopmenuentrystart velocimacro and its corresponding styles * Finished migrating the action-menus stylesheet content.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/buttons.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/buttons.less
@@ -85,6 +85,21 @@
   }
 }
 
+.flat-buttons {
+  .btn-default {
+    background-color: @breadcrumb-bg;
+    background-image: none;
+    border-color: @dropdown-divider-bg;
+    box-shadow: none;
+    color: @dropdown-link-color;
+    text-shadow: none;
+  }
+
+  .btn-default:hover, .btn-default:active, .btn-default:focus, .open .dropdown-toggle {
+    border-color: darken(@dropdown-divider-bg, 10%);
+  }
+}
+
 // Spacing ================================================================
 
 .btn,
