--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/css/action-menus.css
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/css/action-menus.css
@@ -102,7 +102,7 @@ li:has(+ li #tmRegister) #tmLogin {
   margin: 0;
   padding: 0;
 
-  // Remove the bootstrap border on the form when the screen is small
+  /* Remove the bootstrap border on the form when the screen is small */
   @media (max-width: var(--screen-sm-max)) {
     border: none;
   }
@@ -203,172 +203,85 @@ li:has(+ li #tmRegister) #tmLogin {
   cursor: pointer;
 }
 
-/* Navbar dropdown ======================================================== */
-
-@media (min-width: var(--screen-sm-min)) {
-  /* We use mixin guards to simulate conditional assignment. We need the hover and active background color to fall back
-   on the default background color if transparent (e.g. if the user doesn't specify it in the color theme). */
-  .navbar-dropdown(@bg; @hover-bg; @active-bg) when not (@bg = transparent) and (@hover-bg = transparent) {
-    // Make sure the hover background color falls back on the default background color.
-    .navbar-dropdown(@bg, @bg, @active-bg)
-  }
-
-  .navbar-dropdown(@bg; @hover-bg; @active-bg) when not (@bg = transparent) and not (@hover-bg = transparent) and (@active-bg = transparent) {
-    // Make sure the active background color falls back on the default background color.
-    .navbar-dropdown(@bg, @hover-bg, @bg)
-  }
-
-  .navbar-dropdown(@bg; @hover-bg; @active-bg) when not (@bg = transparent) and not (@hover-bg = transparent) and not (@active-bg = transparent) {
-    @navbar-dropdown-contrast: 30%;
-
-    @separator-color: contrast(@bg,
-      darken(@bg, @navbar-dropdown-contrast),
-      lighten(@bg, @navbar-dropdown-contrast));
-    @separator-hover-color: contrast(@hover-bg,
-      darken(@hover-bg, @navbar-dropdown-contrast),
-      lighten(@hover-bg, @navbar-dropdown-contrast));
-    @separator-active-color: contrast(@active-bg,
-      darken(@active-bg, @navbar-dropdown-contrast),
-      lighten(@active-bg, @navbar-dropdown-contrast));
-
-    > a {
-      /**
-       * We have two anchors in the same menu entry: one has the label and the caret for extra small screens (phones,
-       * where the menu is displayed vertically) and the other has the caret for larger screens (where the menu is
-       * displayed horizontally).
-       */
-      float: left;
-    }
-    > .dropdown-split-left {
-      /* Display it closer to the menu toggle. */
-      padding-right: ceil((@navbar-padding-horizontal / 2));
-      > .caret {
-        /* Hide the caret used for extra small screens. */
-        display: none;
-      }
-      /* The separator between the label and the toggle. */
-      &:after {
-        background-color: @separator-color;
-        content: "";
-        display: inline-block;
-        height: @line-height-computed;
-        position: absolute;
-        right: 0;
-        top: @navbar-padding-vertical;
-        width: 1px;
-      }
-      &:hover:after {
-        /* Update the separator color based on the hover color. */
-        background-color: @separator-hover-color;
-      }
-      &:focus:after,
-      &:active:after {
-        /* Update the separator color based on the active color. */
-        background-color: @separator-active-color;
-      }
-    }
-    > .dropdown-split-right {
-      /* Display it closer to the menu label. */
-      padding-left: ceil((@navbar-padding-horizontal / 2));
-      > .caret {
-        /* Reset the left margin for the caret used on large screens. */
-        margin-left: 0;
-      }
-    }
-    &.open > .dropdown-split-left {
-      /* Highlight only the toggle (right side) when the menu is open. */
-      background-color: transparent;
-      color: @navbar-default-link-color;
-      &:hover {
-        /* The link can be hovered when the menu is open because only the toggle is active. */
-        background-color: @navbar-default-link-hover-bg;
-        color: @navbar-default-link-hover-color;
-      }
-    }
-  }
-
-  .navbar-nav > .dropdown-split {
-    .navbar-dropdown(@navbar-default-bg, @navbar-default-link-hover-bg, @navbar-default-link-active-bg)
-  }
-}
-
-// XWikiMainMenu dropdown menus =======================================
+/* XWikiMainMenu dropdown menus ======================================= */
 
 #xwikimainmenu .dropdown-menu {
-  background-color: @dropdown-bg;
+  background-color: var(--dropdown-bg);
 }
 
-// Content menu  ======================================================
+/* Content menu  ====================================================== */
 
-// Used a mix of LESS variables in order to assure the content buttons
-// have a styling more similar to breadcrumbs than buttons, while looking
-// decent across the bundled color themes
-.flat-buttons {
+#contentmenu {
+  /* Used a mix of LESS variables in order to assure the content buttons
+   have a styling more similar to breadcrumbs than buttons, while looking
+   decent across the bundled color themes */
   .btn-default {
-    background-color: @breadcrumb-bg;
+    background-color: var(--breadcrumb-bg);
     background-image: none;
-    border-color: @dropdown-divider-bg;
+    border-color: var(--dropdown-divider-bg);
     box-shadow: none;
-    color: @dropdown-link-color;
+    color: var(--dropdown-link-color);
     text-shadow: none;
   }
 
- .btn-default:hover, .btn-default:active, .btn-default:focus, .open .dropdown-toggle {
-    border-color: darken(@dropdown-divider-bg, 10%);
+  .btn-default:hover, .btn-default:active, .btn-default:focus, .open .dropdown-toggle {
+    border-color: hsl(from var(--dropdown-divider-bg) h s calc(l - 0.10));
   }
-}
-
-#contentmenu {
-  .text-right();
-  .flat-buttons();
 
   .dropdown {
     display: inline-block;
-    font-size: @font-size-large;
-    width: @font-size-large * 2.5;
+    font-size: var(--font-size-large);
+    width: var(--font-size-large) * 2.5;
 
     > a {
-      color: @headings-color;
-      padding: @font-size-large;
+      color: var(--headings-color);
+      padding: var(--font-size-large);
     }
   }
   a.btn.disabled {
     opacity: 1;
-    .text-muted;
+    color: var(--text-muted);
     background-color: transparent;
   }
 
   .btn-group > dl.dropdown-menu {
     & > dt.dropdown-header {
       &.sr-only {
-        // Overwrite bootstrap default style that would take priority on .sr-only style
+        /* Overwrite bootstrap default style that would take priority on .sr-only style */
         padding: 0;
       }
 
-      // Use the bootstrap style for our semantic architecture
-      &:extend(li.dropdown-header);
       font-weight: initial;
     }
 
     & > dd:not(:last-child) {
-      // Add a css separator under the section
+      /* Add a css separator under the section */
       padding-bottom: 10px;
-      border-bottom: 1px solid @dropdown-divider-bg ;
+      border-bottom: 1px solid var(--dropdown-divider-bg);
       margin-bottom: 10px;
     }
 
     & > dd > ul {
-      // Remove default list style
+      /* Remove default list style */
       list-style: none;
       padding-left: 0;
       margin-bottom: 0;
 
       & > li > a {
-        // Use the bootstrap style for our semantic architecture
-        &:extend(.dropdown-menu > li > a);
-        &:hover, &:focus-within {
-          &:extend(.dropdown-menu > li > a:hover);
-        }
+        display: block;
+        padding: 3px 20px;
+        clear: both;
+        font-weight: 400;
+        line-height: var(--line-height-base);
+        color: var(--dropdown-link-color);
+        white-space: nowrap; /* prevent links from randomly breaking onto new lines */
+
+      &:hover,
+      &:focus {
+        color: var(--dropdown-link-hover-color);
+        text-decoration: none;
+        background-color: var(--dropdown-link-hover-bg);
+      }
       }
     }
   }
